F/fix-css-demo2/align filter with layout

--- a/src/assets/styles/views/GigIndex copy.scss
+++ b/src/assets/styles/views/GigIndex copy.scss
@@ -5,7 +5,7 @@
 }
 
 .floating-menu {
-    margin: 0 6px;
+    margin-right: 6px;
     position: relative;
     font-size: 16px;
     font-weight: 600;
